chore: update info.yml

--- a/info.yml
+++ b/info.yml
@@ -1,10 +1,12 @@
 project:
-  name: 'PSG2-2021-GX-XY Petclinic'
-  owner: 'LX'
-  teamId: 'XY'
+  name: 'PSG2-2021-G4-42 Petclinic'
+  owner: 'L4'
+  teamId: '42'
   identities:
     github:
-      url: 'https://github.com/gii-is-psg2/spring-petclinic'
+      url: 'https://github.com/gii-is-psg2/psg2-2122-g4-42'
+    heroku:
+      url: 'https://psg2-2122-g4-42.herokuapp.com/'
   members:
     member1:
       name: 'José María'
